# ocr-project

./: .gitignore
backend/: .dockerignore  Dockerfile  __init__.py  config.py  create_tables.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schemas.py
backend/app/: main.py
backend/app/authentication/: dependencies.py
backend/app/authorization/: __init__.py  casbin_enforcer.py  create_operations.py  dependencies.py  sync.py
backend/app/core/: config.py  email_config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  feature.py  feature_operation.py  otp.py  permission.py  role.py  session.py  user.py  user_roles.py
backend/app/schemas/: __init__.py  auth.py  feature.py  permission.py  role.py  user.py
backend/app/services/: auth_service.py  otp_service.py  session_service.py  user_service.py
backend/app/utils/: utils.py
backend/authentication/: __init__.py  dependencies.py
backend/authentication/controller/: authentication.py
backend/authorization/: casbin_enforcer.py  create_operations.py  dependencies.py  model.conf  sync.py
backend/authorization/controller/: feature_controller.py  permission_controller.py  role_controller.py
backend/common/: config.py  constant.py
backend/controllers/: __init__.py
backend/controllers/v1/: __init__.py  current_user.py  dashboard.py  user.py
backend/model/: __init__.py  feature.py  feature_operation.py  permission.py  role.py  session.py  user.py  user_roles.py
backend/services/: session_service.py  user_service.py
backend/util/: utils.py
(+148 files in other folders)
