[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr-backend"
version = "0.1.0"
description = "OCR Project Backend API"
requires-python = ">=3.8.1,<4.0"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.7.4",
    "python-multipart==0.0.6",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "psycopg2-binary==2.9.9",
    "psutil==7.0.0",
    "inject==4.3.1",
    "authlib==1.3.2",
    "pydash==8.0.5",
    "itsdangerous==2.2.0",
    "casbin==1.43.0",
    "casbin_sqlalchemy_adapter==1.4.0",
    "auth==0.5.3",
    "httpx",
    "python-gitlab",
    "email-validator>=2.0.0",
    "fastapi-mail==1.4.1",
    "pydantic-settings>=2.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]